# myworkspace

./: msys.c
automake/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac
automake/.deps/: main.Po
automake/autom4te.cache/: requests
demo/: demo
envmakefile/: temp.sh
g_open/: Makefile  main.c
genmake/: Makefile
genmake-master/: genmake_2.0_amd64.deb
linbsdmake/: domake.sh
loadunload-module/: hello_module.c  linux_libgeom.c
mntent/: mntent  mntent.c  sg.mk
programming/: snap-create-list-destroy.sh
programming/allindiaexams.in/: DataGeter.py  FetchAllQue.py
programming/alogs/: .main.cpp.swp  .merge-sort.cpp.swp  .merge-sort.h.swp  .quick-sort.cpp.swp  .quick-sort.h.swp  Makefile  binary-search.cpp  main.cpp  merge-sort.cpp  merge-sort.h  quick-sort.cpp  quick-sort.h
programming/automake/: hello  main.c
programming/binary-search/: Makefile  binary-search.cpp
programming/braam/: Makefile  array.c  array.h  binary-tree.c  binary-tree.h  braam.c  linked-list.c  linked-list.h  sorting-algo.c  sorting-algo.h
programming/bug/: Makefile  bug  bug.cpp
programming/chr-pointer/: Makefile  chr-pointer  chr-pointer.c
programming/chr_ptr/: Makefile  chr_ptr  chr_ptr.c
programming/cmake_app/: CMakeLists.txt
programming/cmake_app/src/: main.cpp
programming/control-point/: Makefile  control-point  control-point.cpp
programming/cpp-version/: Makefile  cpp-version  cpp-version.cpp
programming/delete/: Makefile  delete.cpp
programming/demo/: Makefile  demo.c  implicit.txt
programming/enum/: enum  (+2 more)
trace/: Makefile  main
(+185 files in other folders)
